--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "identity-obj-proxy": "^3.0.0",
+    "image-webpack-loader": "^4.2.0",
     "imports-loader": "^0.7.1",
     "jest-cli": "^21.2.1",
     "react-addons-test-utils": "^15.6.2",
@@ -51,6 +52,7 @@
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.5.0",
+    "url-loader": "^1.0.1",
     "webpack-dev-server": "2.9.1"
   },
   "dependencies": {
@@ -72,6 +74,8 @@
     "history": "^4.7.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.1",
     "null-loader": "^0.1.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
